CI: add MSVC build on Windows
Also run a Debug MSVC build (cl) while linking gentest_codegen against the downloaded LLVM/Clang toolchain.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -167,6 +167,11 @@ jobs:
           "LLVM_DIR=$extracted\\lib\\cmake\\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           "Clang_DIR=$extracted\\lib\\cmake\\clang" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
+      - name: Setup MSVC environment
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
+
       - name: Show tool versions
         shell: pwsh
         run: |
@@ -188,6 +193,21 @@ jobs:
             cmake --build --preset=$preset
             ctest --preset=$preset --output-on-failure
           }
+
+          # Also validate MSVC + LLVM tooling (Debug only).
+          $msvcBuildDir = Join-Path $env:GITHUB_WORKSPACE "build\\debug-system-msvc"
+          cmake -S . -B $msvcBuildDir -G Ninja `
+            -DCMAKE_BUILD_TYPE=Debug `
+            -DCMAKE_C_COMPILER=cl `
+            -DCMAKE_CXX_COMPILER=cl `
+            -DCMAKE_CXX_STANDARD=23 `
+            -DCMAKE_CXX_STANDARD_REQUIRED=ON `
+            -DCMAKE_CXX_EXTENSIONS=OFF `
+            -DGENTEST_ENABLE_PACKAGE_TESTS=ON `
+            -DLLVM_DIR="$env:LLVM_DIR" `
+            -DClang_DIR="$env:Clang_DIR"
+          cmake --build $msvcBuildDir
+          ctest --test-dir $msvcBuildDir --output-on-failure
 
   linux:
     name: ${{ matrix.name }} • ${{ matrix.build_type }}
