cmake: make C++ standard per-target
Stop forcing a global C++23 standard via CMakeLists/CMakePresets.

- gentest_runtime now advertises C++20 (PUBLIC) so consumers only need C++20.
- Repo test executables pick their standard via GENTEST_TEST_CXX_STANDARD (20/23).
- gentest_codegen remains C++23, but generated test_impl.cpp builds under the suite's selected standard.
- Added a debug-system-cxx20 preset to exercise the full test suite under C++20.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,7 @@
 include(GentestTests)
 
-set(_gentest_codegen_std_flag "-std=c++23")
-if(DEFINED CMAKE_CXX_COMPILER_FRONTEND_VARIANT AND CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
-    # The compilation database uses MSVC-style flags (MSVC or clang-cl), so the
-    # clang tooling driver runs in clang-cl mode and expects /std: arguments.
-    set(_gentest_codegen_std_flag "/std:c++latest")
-endif()
+gentest_resolve_test_std(_gentest_test_std_feature _gentest_codegen_std_flag)
+unset(_gentest_test_std_feature)
 
 set(_gentest_test_suites
     unit
