Add aarch64 QEMU cross-compile POC
- Add aarch64 GNU toolchain + qemu-aarch64 emulator wiring\n- Add POC runner script + CMake presets + docs\n- Make script-based ctest checks emulator-aware

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -36,6 +36,13 @@ sh_test(
     ],
 )
 
+sh_binary(
+    name = 'poc_cross_aarch64_qemu',
+    srcs = ['scripts/poc_cross_aarch64_qemu.sh'],
+    tags = ['local', 'manual'],
+    visibility = ['//visibility:public'],
+)
+
 gentest_suite('unit')
 gentest_suite('integration')
 gentest_suite('fixtures')
