Default tests/codegen to C++20; keep C++23 override
Nothing requires c++23 as of now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Test executables in this repo are built as C++23 by default, but the runtime
-# is intended to be usable from C++20 projects. Use this knob to validate the
-# repo test suites under C++20 as well.
-set(GENTEST_TEST_CXX_STANDARD "23" CACHE STRING "C++ standard used to build gentest's test executables (20 or 23).")
+# Test executables in this repo are built as C++20 by default, but can be
+# upgraded to C++23 to validate codegen + build wiring under newer language
+# modes.
+set(GENTEST_TEST_CXX_STANDARD "20" CACHE STRING "C++ standard used to build gentest's test executables (20 or 23).")
 set_property(CACHE GENTEST_TEST_CXX_STANDARD PROPERTY STRINGS 20 23)
 
 # Export implicit compiler include directories to compile_commands.json
