Improve README and guard codegen output collisions
Expand README feature snippets (mocks, matchers, reporting, CLI).

Add configure-time checks in gentest_attach_codegen() to prevent multiple targets from generating to the same OUTPUT path.
Add a CTest that validates the collision is detected.

Tested: cmake --preset=debug-system; cmake --build --preset=debug-system; ctest --preset=debug-system --output-on-failure

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -539,6 +539,22 @@ gentest_add_check_contains(
     EXPECT_SUBSTRING benchmarks/math/sin_jitter
     ARGS --list)
 
+add_test(NAME gentest_codegen_output_collision
+    COMMAND ${CMAKE_COMMAND}
+        -DSOURCE_DIR=${PROJECT_SOURCE_DIR}/tests/cmake/codegen_output_collision
+        -DBUILD_ROOT=${CMAKE_CURRENT_BINARY_DIR}
+        -DGENERATOR=${CMAKE_GENERATOR}
+        -DGENERATOR_PLATFORM=${CMAKE_GENERATOR_PLATFORM}
+        -DGENERATOR_TOOLSET=${CMAKE_GENERATOR_TOOLSET}
+        -DTOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
+        -DMAKE_PROGRAM=${CMAKE_MAKE_PROGRAM}
+        -DC_COMPILER=${CMAKE_C_COMPILER}
+        -DCXX_COMPILER=${CMAKE_CXX_COMPILER}
+        -DBUILD_TYPE=${CMAKE_BUILD_TYPE}
+        -P ${PROJECT_SOURCE_DIR}/cmake/CheckCodegenOutputCollision.cmake)
+
+set_tests_properties(gentest_codegen_output_collision PROPERTIES LABELS "cmake")
+
 option(GENTEST_ENABLE_PACKAGE_TESTS "Enable install + find_package consumer smoke test (FetchContent)" OFF)
 if(GENTEST_ENABLE_PACKAGE_TESTS)
     set(_gentest_package_test_config "")
